<resources>
    <string name="app_name">Prayaas</string>

    <string name="student">Students </string>
    <string name="volunteer">Volunteers </string>
    <string name="Book">Books</string>
    <string name="vision">An initiative towards education </string>
    <string name="mock">Mock Tests</string>
    <string name="Achievement">Achievement</string>
    <string name="Donate">Donate</string>
    <string name="Enter_name">Enter Full Name <font color='#FF0000'>*</font></string>
    <string name="Enter_class">Enter Class <font color='#FF0000'>*</font></string>
    <string name="Enter_number">Enter Number <font color='#FF0000'>* </font></string>
    <string name="center">Center <font color='#FF0000'>*</font></string>
    <string name="vpa">itachi00@ybl</string>
    <string name="payee">Prince Garg</string>
    <string name="transaction_description">test transaction</string>
    <string name="amount">1.00</string>
</resources>