<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashActivity"
    android:background="#4991C2">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:id="@+id/Text"
       >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:text="Prayaas"
          android:textStyle="bold"
          android:textSize="40sp"
          android:layout_marginLeft="25dp"
          android:textColor="#fff"
          >

      </TextView>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:text="@string/vision"
          android:textStyle="italic"
          android:layout_marginLeft="25dp"
          android:textSize="15sp"
          android:textColor="#fff"

          >

      </TextView>
   </LinearLayout>
   <GridLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:columnCount="2"
       android:rowCount="3"
       android:layout_below="@+id/Text"
       android:layout_marginLeft="15dp"
       android:layout_marginRight="15dp"
       android:layout_marginBottom="30dp"

       >
      <androidx.cardview.widget.CardView
          android:id="@+id/card_student"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="fill"
          android:layout_row="0"
          android:layout_column="0"
          android:layout_margin="8dp"

          android:layout_rowWeight="1"
          android:layout_columnWeight="1"
          app:cardCornerRadius="12dp"
          app:cardElevation="12dp"
          android:background="#F5F5F5"
          >
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
             android:layout_gravity="center_horizontal|center_vertical"

             >
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/student"
                >
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center_horizontal">
            </TextView>
         </LinearLayout>
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/card_view1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="fill"
          android:layout_row="0"
          android:layout_column="1"
          android:layout_margin="8dp"
          android:layout_rowWeight="1"
          android:layout_columnWeight="1"
          app:cardElevation="12dp"
          app:cardCornerRadius="12dp"
          android:background="#F5F5F5"
          >
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
             android:layout_gravity="center_vertical|center_horizontal"

             >
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/volunteer"
                >
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="volunteer"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center_horizontal">
            </TextView>
         </LinearLayout>
      </androidx.cardview.widget.CardView>
      <androidx.cardview.widget.CardView
          android:id="@+id/card_view2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="fill"
          android:layout_row="1"
          android:layout_column="0"
          android:layout_margin="8dp"
          android:layout_rowWeight="1"
          android:layout_columnWeight="1"
          app:cardElevation="12dp"
          app:cardCornerRadius="12dp"
          android:background="#F5F5F5"
          >
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
             android:layout_gravity="center_horizontal|center_vertical"

             >
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/books"
                >
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Book"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center_horizontal">
            </TextView>
         </LinearLayout>
      </androidx.cardview.widget.CardView>
      <androidx.cardview.widget.CardView
          android:id="@+id/card_view3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="fill"
          android:layout_row="1"
          android:layout_column="1"
          android:layout_margin="8dp"
          android:layout_rowWeight="1"
          android:layout_columnWeight="1"
          app:cardElevation="12dp"
          app:cardCornerRadius="12dp"
          android:background="#F5F5F5"
          >
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
             android:layout_gravity="center_vertical|center_horizontal"

             >
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/test"
                >
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tests"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center_horizontal">
            </TextView>
         </LinearLayout>
      </androidx.cardview.widget.CardView>
      <androidx.cardview.widget.CardView
          android:id="@+id/card_view4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="fill"
          android:layout_row="2"
          android:layout_column="0"
          android:layout_margin="8dp"
          android:layout_rowWeight="1"
          android:layout_columnWeight="1"
          app:cardElevation="12dp"
          app:cardCornerRadius="12dp"
          android:background="#F5F5F5"
          >
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
             android:layout_gravity="center_horizontal|center_vertical"

             >
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/funding"
                >
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Donate"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center_horizontal">
            </TextView>
         </LinearLayout>
      </androidx.cardview.widget.CardView>
      <androidx.cardview.widget.CardView
          android:id="@+id/card_view5"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="fill"
          android:layout_row="2"
          android:layout_column="1"
          android:layout_margin="8dp"
          android:layout_rowWeight="1"
          android:layout_columnWeight="1"
          app:cardElevation="12dp"
          app:cardCornerRadius="12dp"
          android:background="#F5F5F5"
          >
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
             android:layout_gravity="center_vertical|center_horizontal"

             >
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/achievement"
                >
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vision"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center_horizontal">
            </TextView>
         </LinearLayout>
      </androidx.cardview.widget.CardView>

   </GridLayout>


</RelativeLayout>