<?xml version="1.0" encoding="utf-8"?>
<ScrollView   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
     android:layout_height="match_parent">
<LinearLayout 
    android:layout_width="fill_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:orientation="vertical"
    android:layout_height="fill_parent"
    tools:context=".AddStudentActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/txt_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Student Details"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textSize="30dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Complete  Profile"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:fitsSystemWindows="true"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profie_img"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/profile_icon"
                app:civ_border_color="@color/th"
                app:civ_border_width="1dp">

            </de.hdodenhof.circleimageview.CircleImageView>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/plus_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"

               android:backgroundTint="@color/cream_w"
             android:layout_marginStart="-40dp"
                android:layout_gravity="bottom"
             android:background="@drawable/round"
                android:padding="5dp"
                android:src="@drawable/plus">

            </de.hdodenhof.circleimageview.CircleImageView>


        </LinearLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/Enter_name"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Enter_class"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >



        <AutoCompleteTextView
            android:id="@+id/txt_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            >



            <AutoCompleteTextView
                android:id="@+id/filled_exposed_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/Enter_number"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="Enter Age"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Gender"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >



            <AutoCompleteTextView
                android:id="@+id/txt_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_father"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="Father Name"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_father_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="Father Phone Number"
                />


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="Address"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_mother"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="Mother Name"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="Current Teacher"
                />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btn_signup"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="25dp"
            android:textStyle="bold"
            android:text="Add"
            />





    </LinearLayout>


</LinearLayout>
</ScrollView>